# yd-test-python-package-00

./: README.md  TODO  TODO.md  pyproject.toml
.github/workflows/: python-publish.yml
src/yd_test_python_package_00/: __init__.py  my_method.py
tests/: test_method.py
