# https://github.com/microsoft/python-package-template/blob/main/pyproject.toml
[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[project]
name = "yd_test_python_package_00"
authors = [
    {name = "Chen Yudong", email = "yudongchen95@gmail.com"}
]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dynamic = ["version", "description"]
requires-python = ">=3.7"

dependencies = [
    "pyyaml",
]

[project.optional-dependencies]
dev = [
    "typing-extensions; python_version < '3.8'",
]
test = [
    "pytest",
    "pytest-cov",
]
doc = [
    "sphinx",
    # theme
    "sphinx-rtd-theme",
    # extensions
    "sphinx_copybutton",        # copy button
    "myst-parser",              # markdown support
    "sphinxcontrib-mermaid",    # mermaid graph support
    "sphinx-argparse",          # auto-generate cli help message
]

[project.urls]
homepage = "https://github.com/ydc-0/yd-test-python-package-00"
repository = "https://github.com/ydc-0/yd-test-python-package-00"
documentation = "https://github.com/ydc-0/yd-test-python-package-00/blob/main/README.md"
changelog = "https://github.com/ydc-0/yd-test-python-package-00/blob/master/CHANGELOG.md"

[tool.flit.module]
name = "yd_test_python_package_00"

[tool.bandit]
exclude_dirs = ["build","dist","tests","scripts"]
number = 4
recursive = true
targets = "src"

[tool.coverage.run]
branch = true

[tool.coverage.report]
fail_under = 100

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.0.1dev"
tag_format = "v$version"
version_files = [
    "yd_test_python_package_00/__init__.py",
]

[tool.pyright]
include = ["src"]
exclude = [
    "**/node_modules",
    "**/__pycache__",
]
venv = "env37"

reportMissingImports = true
reportMissingTypeStubs = false

pythonVersion = "3.7"
pythonPlatform = "Linux"

executionEnvironments = [
  { root = "src" }
]

[tool.pytest.ini_options]
addopts = "--cov-report xml:coverage.xml --cov src --cov-fail-under 0 --cov-append -m 'not integration'"
pythonpath = [
  "src"
]
testpaths = [
    "tests",
]

[tool.isort]
profile = 'black'
force_grid_wrap = 1

[tool.black]
line-length = 120
# skip-string-normalization = true

[tool.ruff]
select = [
    'F',  # Pyflakes
    'E',  # pycodestyle
    'W',  # pycodestyle
#    'C90',  # mccabe
#    'I',  # isort
#    'N',  # pep8-naming
#    'D',  # pydocstyle
#    'UP',  #  pyupgrade
#    'YTT',  # flake8-2020
#    'ANN',  # flake8-annotations
#    'S',  # flake8-bandit
#    'BLE',  # flake8-blind-except
#    'FBT',  # flake8-boolean-trap
#    'B',  # flake8-bugbear
#    'A',  # flake8-builtins
#    'COM',  # flake8-commas
#    'C4',  #  flake8-comprehensions
#    'DTZ',  # flake8-datetimez
#    'T10',  # flake8-debugger
#    'DJ',  #  flake8-django
#    'EM',  #  flake8-errmsg
#    'EXE',  # flake8-executable
#    'ISC',  # flake8-implicit-str-concat
#    'ICN',  # flake8-import-conventions
#    'G',  # flake8-logging-format
#    'INP',  # flake8-no-pep420
#    'PIE',  # flake8-pie
#    'T20',  # flake8-print
#    'PYI',  # flake8-pyi
#    'PT',  #  flake8-pytest-style
#    'Q',  # flake8-quotes
#    'RSE',  # flake8-raise
#    'RET',  # flake8-return
#    'SLF',  # flake8-self
#    'SIM',  # flake8-simplify
#    'TID',  # flake8-tidy-imports
#    'TCH',  # flake8-type-checking
#    'ARG',  # flake8-unused-arguments
#    'PTH',  # flake8-use-pathlib
#    'ERA',  # eradicate
#    'PD',  #  pandas-vet
#    'PGH',  # pygrep-hooks
#    'PL',  #  Pylint
#    'TRY',  # tryceratops
#    'NPY',  # NumPy-specific rules
#    'RUF',  # Ruff-specific rules
]
line-length = 120
target-version = "py37"
typing-modules = [
    "yd_test_python_package_00.my_method"
]

[tool.mypy]
python_version = "3.7"
